--- a/Aplikacija/Prototip/Projekat_1/Pages/Znamenitosti.cshtml
+++ b/Aplikacija/Prototip/Projekat_1/Pages/Znamenitosti.cshtml
@@ -15,6 +15,7 @@
             <h3> Ime znamenitosti: @znamenitost.NazivZnamenitosti</h3>
             <p> Lokacija: @znamenitost.LokacijaZnamenitosti</p>
             <a asp-page="./JednaZnamenitost/" asp-route-id="@znamenitost.IdZnamenitosti">Prikazi detalje</a>
+            <a asp-page="./IzmeniZnamenitost" asp-route-id="@znamenitost.IdZnamenitosti">Izmeni Znamenitost</a>
         </div>
     }
 </form>
