--- a/Aplikacija/Prototip/Projekat_1/Pages/EditPitanje.cshtml
+++ b/Aplikacija/Prototip/Projekat_1/Pages/EditPitanje.cshtml
@@ -1,17 +1,18 @@
-﻿@page
-@model Projekat_1.AddPitanjeModel
+@page
+@model Projekat_1.EditPitanjeModel
+
 @{
-    @ViewBag
+    ViewData["Title"] = "EditPitanje";
 }
 
-<h1>AddPitanje</h1>
 
-<h4>Pitanja</h4>
+<h4>Pitanje</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="Pitanje.IdPitanje" />
             <div class="form-group">
                 <label asp-for="Pitanje.PitanjeTekst" class="control-label"></label>
                 <input asp-for="Pitanje.PitanjeTekst" class="form-control" />
@@ -37,20 +38,15 @@
                 <input asp-for="Pitanje.Tacan" class="form-control" />
                 <span asp-validation-for="Pitanje.Tacan" class="text-danger"></span>
             </div>
-             <div class="form-group">
-              <label asp-for="Pitanje.KvizId" class="control-label"></label>
-              <input asp-for="Pitanje.KvizId" class="form-control" />
-                <span asp-validation-for="Pitanje.KvizId" class="text-danger"></span>
-            </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Sacuvaj" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-page="Index">Back to List</a>
+    <a asp-page="./Pitanja">Vrati se na listu pitanja</a>
 </div>
 
 @section Scripts {
