--- a/Aplikacija/Prototip/Projekat_1/Pages/JedanKviz.cshtml
+++ b/Aplikacija/Prototip/Projekat_1/Pages/JedanKviz.cshtml
@@ -4,3 +4,26 @@
  ViewData["Title"]="JedanKviz";
 }
 
+<ol type="1">
+@foreach(var pitanje in Model.Pitanje)
+{
+   
+         <li>
+             @pitanje.PitanjeTekst
+             <ol type="a">
+                 <li>
+                     <input type="radio" name="@pitanje.IdPitanje" value="@pitanje.Opa"/>
+                     @pitanje.Opa
+                 </li>
+                 <li>
+                     <input type="radio" name="@pitanje.IdPitanje" value="@pitanje.Opb"/>
+                     @pitanje.Opb
+                 </li>
+                 <li>
+                     <input type="radio" name="@pitanje.IdPitanje" value="@pitanje.Opc"/>
+                     @pitanje.Opc
+                 </li>
+             </ol>
+        </li>
+}
+ </ol>
