--- a/Aplikacija/Prototip/Projekat_1/Pages/Ture.cshtml
+++ b/Aplikacija/Prototip/Projekat_1/Pages/Ture.cshtml
@@ -27,7 +27,7 @@
             <tr>
                 <td>@ture.IdTure</td>
                 <td>@ture.NazivTure</td>
-                <td></td>
+                <td><a asp-page="./ZnamenitostiUTurama" asp-route-id="@ture.IdTure">Prikazi listu znamenitosti</a></td>
                 <td>@ture.IdVodicaTura</td>
                 <td>@ture.DatumOdrzavanja</td>
                 <td>@ture.VremeOdrzavanja</td>
