--- a/Aplikacija/Konacni_Projekat/Projekat/Pages/Prijava.cshtml
+++ b/Aplikacija/Konacni_Projekat/Projekat/Pages/Prijava.cshtml
@@ -2,3 +2,22 @@
 @model Projekat.Pages.PrijavaModel
 @{
 }
+
+
+
+<form method="post">
+  <div class="prijava fadeInDown">
+    <div id="formContent">
+      <input type="text"  placeholder="Korisnicko ime" asp-for="TrenutniKorisnik.Username">
+      <input type="password"  placeholder="Lozinka" asp-for="TrenutniKorisnik.Password">
+      <button type="submit" class="fadeIn third">Prijavi se</button>
+    </div>
+  </div>
+</form>
+
+@if (Model.SessionId == -1)
+{<div class="alert alert-danger" role="alert">
+    Uneli ste pogresno korisnicko ime ili lozinku.
+</div>
+}
+
