--- a/Aplikacija/Konacni_Projekat/Projekat/Pages/Prijava.cshtml
+++ b/Aplikacija/Konacni_Projekat/Projekat/Pages/Prijava.cshtml
@@ -16,8 +16,11 @@
 </form>
 
 @if (Model.SessionId == -1)
-{<div class="alert alert-danger" role="alert">
-    Uneli ste pogresno korisnicko ime ili lozinku.
-</div>
+{
+  <div class="prijava fadeInDown">
+   <div class="alert alert-danger" role="alert">
+     Uneli ste pogresno korisnicko ime ili lozinku.
+   </div>
+ </div>
 }
 
