--- a/Aplikacija/Konacni_Projekat/Projekat/Pages/Prijava.cshtml
+++ b/Aplikacija/Konacni_Projekat/Projekat/Pages/Prijava.cshtml
@@ -10,7 +10,7 @@
     <div id="formContent">
       <input type="text"  placeholder="Korisnicko ime" asp-for="TrenutniKorisnik.Username">
       <input type="password"  placeholder="Lozinka" asp-for="TrenutniKorisnik.Password">
-      <button type="submit" class="fadeIn third">Prijavi se</button>
+      <button type="submit">Prijavi se</button>
     </div>
   </div>
 </form>
