--- a/Aplikacija/Konacni_Projekat/Projekat/Pages/Registracija.cshtml
+++ b/Aplikacija/Konacni_Projekat/Projekat/Pages/Registracija.cshtml
@@ -14,7 +14,7 @@
           <input type="text" asp-for="NoviTurista.Email" placeholder="Email" required />
          <input type="text" asp-for="NoviKorisnik.Username" placeholder="Korisnicko ime" required />
           <input type="text"  asp-for="NoviKorisnik.Password" placeholder="Lozinka" required />
-        <button type="text"  type="submit" class="btn btn-primary">Registruj se</button>
+        <button type="submit" class="btn btn-primary">Registruj se</button>
      </form> 
      </div>
 </div>
