--- a/Aplikacija/Konacni_Projekat/Projekat/Areas/Znamenitosti/Pages/Index.cshtml
+++ b/Aplikacija/Konacni_Projekat/Projekat/Areas/Znamenitosti/Pages/Index.cshtml
@@ -6,3 +6,5 @@
 <div class="text-center">
     <h1 class="display-4">Znamenitosti</h1>
 </div>
+
+<a href="/Znamenitosti/Add">Dodaj znamenitost </a>
