--- a/Aplikacija/Konacni_Projekat/Projekat/Areas/Znamenitosti/Pages/Index.cshtml
+++ b/Aplikacija/Konacni_Projekat/Projekat/Areas/Znamenitosti/Pages/Index.cshtml
@@ -14,6 +14,7 @@
         <div class="card-body">
             <h5 class="card-title">@Html.DisplayFor(modelItem=>item.NazivZnamenitosti)</h5>
             <a href="/Znamenitosti/ViewOne?id=@item.IdZnamenitosti">Prikazi detalje</a>
+			<a href="/Znamenitosti/Edit?id=@item.IdZnamenitosti">Izmeni znamenitost</a>
         </div>
     </div>
 }
