--- a/Aplikacija/KonacniProjekat/Pages/KvizSvi.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/KvizSvi.cshtml
@@ -1,4 +1,52 @@
 ﻿@page
 @model KonacniProjekat.KvizSviModel
 @{
+    ViewData["Title"]="Kvizovi";
 }
+<div class="text-center">
+    <h1 class="display-4">Kvizovi</h1>
+</div>
+
+<div class="text-right">
+    <h3><a asp-page="./KvizDodaj">Dodaj kviz</a></h3>
+</div>
+
+<div>
+    <table class="table table-bordered">
+        <thead>
+            <th>ID kviza</th>
+            <th>Naziv kviza</th>
+            <th>Znamenitost</th>
+            <th>Broj pitanja</th>
+            <th>Najbolji rezultat</th>
+            <th>Broj učesnika</th>
+            <th></th>
+            <th></th>
+        </thead>
+
+        <tbody>
+            <form method="get">
+                @foreach (var kviz in Model.SviKvizovi)
+                {
+                    <tr>
+                        <td>@kviz.IdKviza</td>
+                        <td>@kviz.NazivKviza</td>
+                        <td>@if (kviz.IdZnamenitostiKNavigation == null)
+                            {
+                            }                               
+                            else
+                            {
+                                @kviz.IdZnamenitostiKNavigation.NazivZnamenitosti
+                            }
+                        </td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td><a asp-page="./KvizUradi" asp-route-id="@Model.SessionId" asp-route-kviz="@kviz.IdKviza">Uradi kviz</a></td>
+                        <td><a asp-page="./KvizJedan" asp-route-id="@Model.SessionId" asp-route-kviz="@kviz.IdKviza">Vidi kviz</a></td>
+                    </tr>
+                }
+            </form>
+        </tbody>
+    </table>
+</div>
